--- a/scss/main.scss
+++ b/scss/main.scss
@@ -187,16 +187,93 @@ section, header {
 }
 
 
+// .attention-wrapper {
+//   background: 
+//     linear-gradient(
+//       to right,
+//       rgba(#12A454, 0.9),
+//       rgba(#B1D043, 0.9)
+//     ),
+//     url('../img/IMG_00271.jpg') center top;
+//   background-size: cover;
+//     color: $primary-color;
+
+//   .attention {
+//     margin-top: 6.4rem;
+//     height: 390px;
+//     padding-top: 7rem;
+//     padding-bottom: 5rem;
+//     @include flex(column);
+//     gap: 2rem;
+//     @include phones-small {
+//       align-items: flex-start;
+//       height: 760px;
+//     }
+
+//     h2, h4, ul {
+//       width: 700px;
+//       margin: 0 auto;
+//       text-align: center;
+//       @include phones-small {
+//         width: 100%;
+//         text-align: left;
+//         margin: 0;
+//       }
+//     }
+
+//     h2 {
+//       font-size: 3.2rem;
+//     }
+
+//     li {
+//       list-style-type: disc;
+//       list-style-position: inside;
+//       @include phones-small {
+//         margin-top: .4rem;
+//       }
+//     }
+
+//     h4, li {
+//       @extend p;
+//       color: $primary-color;
+//     }
+
+//     button {
+//       display: block;
+//       margin: 2.4rem auto 0 auto;
+
+//       @include phones-small {
+//         margin: 0;
+//         margin-top: 2.4rem;
+//       }
+//     }
+//   }
+// }
+
+
+
 .attention-wrapper {
-  background: 
+  color: $primary-color;
+  width: 100%;
+  min-height: 390px;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: 
     linear-gradient(
       to right,
-      rgba(#12A454, 0.9),
-      rgba(#B1D043, 0.9)
-    ),
-    url('../img/IMG_00271.jpg') center top;
-  background-size: cover;
-    color: $primary-color;
+      rgba(#12A454, 0.82),
+      rgba(#B1D043, 0.82)
+    );
+    // mix-blend-mode: soft-light;
+    z-index: 1;
+  }
 
   .attention {
     margin-top: 6.4rem;
@@ -205,9 +282,15 @@ section, header {
     padding-bottom: 5rem;
     @include flex(column);
     gap: 2rem;
+    width: 100%;
     @include phones-small {
       align-items: flex-start;
       height: 760px;
+    }
+
+    .info {
+      z-index: 2;
+      position: relative;
     }
 
     h2, h4, ul {
@@ -249,6 +332,7 @@ section, header {
     }
   }
 }
+
 
 .courtesy {
   margin-top: 8rem;
